Fix error when running in windows